static/css/style.css
/* ... */
.about-container .image {
    flex: 1;
    background-image: url('/static/images/matter-lake.png');
    background-size: cover;
    background-position: left center;
    height: 100%; 
}

.about-container h1 {
    font-size: 32px;
    margin-bottom: 50px;
    margin-top: 50px; 
}

h2 {
    color: #FFD700;
}

.about-container p {
    font-size: 13px;
    line-height: 1.6;
}

/* REVIEWS LIST PAGE STYLING */

.review-page {
    background-image: url('/static/images/reviews-pic.png');
    background-size: cover;
    background-position: center;
}

.review-list-page {
    padding-left: 5%; 
}

.review-list {
    position: relative;
    width: 100%;
    max-width: 600px;
    height: 200px;
}

.review-item {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    opacity: 0;
    transition: opacity 0.9s ease-in-out;
    pointer-events: none;;
}

.review-item.active {
    opacity: 1;
    pointer-events: auto;
    z-index: 1;
}

.review-stars .star {
    font-size: 1.2rem;
    color: #666;
}

.review-stars .star.filled {
    color: gold;
}

body.review-dark {
  background-color: #031430;
  color: #fff;
}

.review-list-page h1 {
    padding-top: 100px;
}

.review-list-page .btn {
    display: inline-block;
    padding: 10px 20px;
    background-color: #FFD700;
    color: rgb(8, 8, 8);
    text-decoration: none;
    font-size: 16px;
    border-radius: 5px;
}

 .review-list-page .btn:hover {
    background-color: #FF8C00;
    color: #FFD700;
} 

.review-list-page .review-list {
    margin-top: 40px;
}

.review-list-page .review-item {
    background-color: #282928;
    padding: 15px;
    margin-bottom: 15px;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.review-list-page .review-item h2 {
    margin-bottom: 10px;
}

.review-list-page .review-item p {
    font-size: 14px;
    line-height: 1.5;
    color: white;
}

.review-list-page hr {
    margin-top: 20px;
    border: 0.5px solid #ddd;
}

.read-more-link,
.btn.small {
  color: white;
  text-decoration: underline;
}

.read-more-link:hover,
.btn.small:hover {
  text-decoration: underline;
}

/* STOPS LINK GOING PURPLE AFTER CLICKING */
.read-more-link:visited,
.btn.small:visited {
  color: white;
}

/* INDIVIDUAL REVIEWS PAGE WITH HEART */

.review-header {
    margin-top: 60px;
    border-bottom: 1px solid #444;
    margin-bottom: 1rem;
}

.review-meta {
    display: flex;
    gap: 1rem;
    font-size: 0.9rem;
    color: #aaa;
    flex-wrap: wrap;
    align-items: center;
}

.review-rating {
    color: gold;
    font-size: 1.2rem;
}

.like-block {
    display: flex;
    align-items: center;
    gap: 5px;
}

.like-button {
    all: unset;
    font-size: 1.8rem;
    cursor: pointer;
    color: #ccc;
    transition: color 0.3s ease;
    display: inline-block;
    line-height: 1;
}

.like-button:hover {
    color: red;
}

.liked {
    color: red;
}

.like-count {
    font-size: 1.2rem;
}

.review-body {
    margin: 1rem 0;
    font-size: 1.1rem;
    line-height: 1.5;
}

.edit-delete-buttons {
    margin-top: 10px;
}

.edit-delete-buttons .btn.small {
    font-size: 0.8rem;
    padding: 0.3rem 0.6rem;
}

.comment-section {
    border-top: 1px solid #f3f4f7;
    margin-top: 2rem;
    padding-top: 1rem;
}

.comments-list {
    margin-top: 1rem;
}

.comment {
    background-color: #031430;
    padding: 10px;
    margin-bottom: 1rem;
    border-radius: 6px;
}

.comment-date {
    font-size: 0.8rem;
    color: #777;
}

.no-comments {
    font-style: italic;
    color: #888;
}

/* BOOKING FORM PAGE STYLING */

.booking-page {
    background-image: url('/static/images/shack-inside.png');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    height: 100vh;
    margin: 0;
    padding: 0;
}

.container {
    max-width: 500px;
    margin: 20px auto;
    margin-top: 200px;
    background-color: #000000; 
    padding: 30px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
}

.container h1 {
    text-align: center;
    margin-bottom: 20px;
}

form p {
    font-size: 16px;
    margin-bottom: 10px;
}

button.btn {
    font-family: 'Orbitron', Arial, sans-serif;
    display: block;
    padding: 15px;
    background-color: #FFD700;
    border: none;
    border-radius: 5px;
    margin-top: 25px;
    font-size: 18px;
    cursor: pointer;
}

button.btn:hover {
    background-color: #FF8C00;
}

.messages .error {
  color: red; /* FOR NON-SIGNED IN BOOKING ATTEMPTS */
  margin-top: 10px;
  font-weight: bold;
}

/* SIGN UP FORM */

.form-row {
  margin-bottom: 1.2rem;
  display: flex;
  flex-direction: column;
  width: 50%;
}

.form-row label {
  font-weight: bold;
  margin-bottom: 0.2rem;
}

.helptext {
  font-size: 0.9rem;
  color: #888;
  margin-top: 0.4rem;
}
/* ... */

